# GestaltWorkframe

./: .dockerignore  .env.example  .gitignore  AGENTS.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  claude.md  docker-compose.yml  objectives.md  pyproject.toml
api/: admin.py  admin_discovery.py  admin_newsletter.py  chat.py  connectors_webhook.py  contact.py  deployment_config.py  health.py  intake.py  library_feed.py  main.py  newsletter_public.py  privacy_audit.py  request_helpers.py  services.py
core/: answer_grading.py  chat_orchestrator.py  cloud_budget.py  contact_autoreply.py  deployment_config.py  discovery_digest.py  discovery_document.py  discovery_queue.py  discovery_retrieval.py  discovery_scheduler.py  discovery_scout.py  email_service.py  handoff_packets.py  key_store.py  model_profile.py  newsletter.py  orchestrator.py  personas.py  policy.py  provider_registry.py  providers.py  retention.py  retrieval.py  router.py  routing_frame.py  subscribers.py  tool_policy.py
docker/: api.Dockerfile  proxy.Dockerfile  proxy.conf  web-nginx.conf  web.Dockerfile
docs/: architecture.md  dr-runbook.md  framework-vs-reference-implementation.md  library-config-design.md  routing-policy.md  threat-model.md
kb/: discovery_ingest.py  ingest.py  library_publisher.py  maintenance.py  retrieval_format.py  source_links.py  source_registry.py  watchlist.py  watchlist_seed.py
llm/: control_local_model.ps1  download_model.ps1  profiles.json  start_server.ps1
mcp_servers/: kb_server.py
scripts/: key_store_backup.py  run_discovery.py
tests/: conftest.py  test_admin_api.py  test_admin_discovery_web.py  test_admin_internals.py  test_admin_newsletter_endpoints.py  test_answer_grading.py  test_api_main.py  test_budget_alerts.py  test_chat_heartbeat.py  test_chat_orchestrator.py  test_chat_orchestrator_helpers.py  test_claude_review.py  test_cloud_budget.py  test_connectors_webhook.py  test_contact.py  test_contact_autoreply.py  test_crud.py  test_db_config.py  test_deploy.py  test_deployment_config.py  test_discovery_admin_api.py  test_discovery_admin_api_phase2.py  test_discovery_category_rollup_migration.py  test_discovery_creds.py  test_discovery_display.py  test_discovery_document.py  test_discovery_handlers_github.py  test_discovery_handlers_github_artifact.py  test_discovery_handlers_github_topic.py  test_discovery_handlers_github_user_org.py  test_discovery_handlers_rss.py  test_discovery_handlers_saved_search.py  test_discovery_handlers_subreddit.py  test_discovery_handlers_web_diff.py  test_discovery_handlers_youtube_channel.py  test_discovery_ingest.py  test_discovery_manual_url.py  (+57 more)
(+161 files in other folders)
